# https---github.com-BIT-aerial-robotics-OptMultic

./: CMakeLists.txt
config/: lab1.yaml
data/c1/lab1/: vio.csv  vio_loop.csv
data/c1/lab2/: vio.csv
data/c1/lab3/: vio.csv
data/c2/lab3/: vio.csv  vio_loop.csv
data/c3/lab1/: vio.csv
data/c3/lab2/: vio.csv
data/c4/lab3/: vio.csv  vio_loop.csv
data/c5/lab1/: vio.csv
data/c6/: vio.csv  vio_loop.csv
src/: ceres_example.cpp
